# jobscout-ai

./: .gitignore  Makefile
apps/api/: pyproject.toml
apps/api/jobscout_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
